[metadata]
name = yamdl
version = attr: yamdl.__version__
url = https://github.com/andrewgodwin/yamdl/
author = Andrew Godwin
description = Flat-file model instances for Django
long_description = file: README.rst
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = True
packages = find:
install_requires =
    Django>=3.2
    pyyaml>=3.12
python_requires = >= 3.7

[flake8]
exclude = venv/*,tox/*,specs/*
ignore = E123,E128,E266,E402,F405,E501,W503,E731,W601
max-line-length = 119

[isort]
profile = black
multi_line_output = 3

[mypy]
warn_unused_ignores = True

[mypy-airflow.*]
ignore_missing_imports = True

[mypy-dateutil.tz]
ignore_missing_imports = True
